--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-//
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>BeatMarker – Mark Your Music</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/garet" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <ul class="nav-links">
+          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="#features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#download">Download</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="hero">
+      <div class="overlay"></div>
+      <div class="hero-content">
+        <h1>BeatMarker</h1>
+        <p>
+          Place markers in your favorite songs. Perfect for dancers,
+          choreographers, and musicians!
+        </p>
+        <a href="https://www.apple.com/de/app-store/"
+          ><img
+            src="/Assets/appstore-badge.png"
+            alt="Download on App Store"
+            class="appstore-badge"
+        /></a>
+      </div>
+    </section>
+
+    <section id="about" class="section">
+      <h2>About BeatMarker</h2>
+      <p>
+        BeatMarker helps you set precise markers in any song. Plan your
+        choreography, practice sessions, or music edits easily. Just import your
+        song, add markers – and you're ready to go!
+      </p>
+    </section>
+
+    <section id="features" class="section">
+      <h2>Features</h2>
+      <ul class="features-list">
+        <li>🎵 Import and organize your songs</li>
+        <li>📝 Set and save markers easily</li>
+        <li>📂 Export your songs with markers</li>
+        <li>🌟 Simple and intuitive design</li>
+      </ul>
+    </section>
+
+    <section id="video" class="section video-section">
+      <div class="container">
+        <div class="video-content">
+          <div class="video-wrapper">
+            <video
+              src="Assets/Full Walkthrough.mp4"
+              controls
+              muted
+              playsinline
+            ></video>
+          </div>
+          <div class="video-text">
+            <h2>Discover BeatMarker</h2>
+            <p>
+              Watch how easy it is to set markers in your favorite songs.
+              BeatMarker helps dancers, musicians, and choreographers organize
+              their music perfectly!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="download" class="section">
+      <h2>Download BeatMarker</h2>
+      <p>Coming soon to the App Store! Stay tuned 🚀</p>
+    </section>
+
+    <footer>
+      <p>© 2025 BeatMarker. Made with 💖 by Nina.</p>
+    </footer>
+  </body>
+</html>
