--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 
     <footer>
       <p>© 2025 BeatMarker. Made with 💖 by Nina.</p>
+      <a href="https://ninapineda.github.io/beatmarker/privacy.html">
+        About Privacy</a
+      >
     </footer>
   </body>
 </html>
