--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Place markers in your favorite songs. Perfect for dancers,
           choreographers, and musicians!
         </p>
-        <a href="https://www.apple.com/de/app-store/"
+        <a href="https://apps.apple.com/de/app/beatmarker/id6745179018"
           ><img
             src="/Assets/appstore-badge.png"
             alt="Download on App Store"
