--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
         <a href="https://apps.apple.com/de/app/beatmarker/id6745179018"
           ><img
-            src="/Assets/appstore-badge.png"
+            src="Assets/appstore-badge.png"
             alt="Download on App Store"
             class="appstore-badge"
         /></a>
